src/test/ui/deprecation/issue-84637-deprecated-associated-function.stderr
error: use of deprecated associated function `core::str::<impl str>::trim_left`: superseded by `trim_start`
  --> $DIR/issue-84637-deprecated-associated-function.rs:6:21
   |
LL |     let _foo = str::trim_left("   aoeu");
   |                     ^^^^^^^^^ help: replace the use of the deprecated associated function: `trim_start`
   |
note: the lint level is defined here
  --> $DIR/issue-84637-deprecated-associated-function.rs:3:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: use of deprecated associated function `core::str::<impl str>::trim_left`: superseded by `trim_start`
  --> $DIR/issue-84637-deprecated-associated-function.rs:8:26
   |
LL |     let _bar = "   aoeu".trim_left();
   |                          ^^^^^^^^^ help: replace the use of the deprecated associated function: `trim_start`

error: aborting due to 2 previous errors

